--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-watch":"nodemon server/server.js",
+    "start-watch": "nodemon server/server.js",
     "start": "node server/server.js"
   },
   "engines": {
@@ -14,7 +14,8 @@
   "author": "moser-ss",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
