--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "test": "mocha --recursive test/",
+    "lint" :"eslint .",
     "test-watch": "nodemon --exec 'npm test'",
     "start-watch": "nodemon server/server.js",
     "start": "node server/server.js"
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^5.11.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9"
   }
