--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,7 @@ sonar.sources=server/
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.language=js
+sonar.tests=/tests
+
+sonar.javascript.lcov.reportPaths=/coverage/lcov.info
