--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,6 @@ sonar.sources=server/
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 sonar.language=js
-sonar.tests=/tests
+sonar.tests=test/
 
 sonar.javascript.lcov.reportPaths=/coverage/lcov.info
