--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "test": "mocha --recursive test/",
-    "test-coverage": "nyc --reporter=lcov --reporter=text-lcov npm test",
+    "test-coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
     "lint": "eslint .",
     "test-watch": "nodemon --exec 'npm test'",
     "start-watch": "nodemon server/server.js",
