--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,13 +16,17 @@ jobs:
         with:
           persist-credentials: 'false'
           fetch-depth: 0
+          
       - name: Get Node.js version
         id: nvm
         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
+          cache: 'npm'
+
       - name: Dependency installation
         run: npm ci
 
