--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=Moser-ss_node-chat-app
+sonar.organization=moser-ss-github
 # this is the name and version displayed in the SonarCloud UI.
 sonar.projectName=node-chat-app
 sonar.projectVersion=1.0
