--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "eslint": "^5.11.0",
-    "mocha": "^5.2.0",
+    "mocha": "10.1.0",
     "nodemon": "^2.0.15",
-    "nyc": "^14.1.1"
+    "nyc": "15.0.0"
   }
 }
